se agregan stilos y html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Planeador semanal</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div>
+      <section>
+        <div class="title">
+          <p>Objetivos</p>
+          <p>Lo que quiero lograr</p>
+        </div>
+        <!-- Para el título -->
+        <div class="goals">
+          <div class="glassmorphism-effect">
+            <img
+              src="https://img.icons8.com/nolan/64/love-book.png"
+              alt="libro"
+            />
+          </div>
+          <p>Leer más</p>
+        </div>
+        <!-- Para el Objetivo 1 -->
+        <div></div>
+        <!-- Para el Objetivo 2 -->
+        <div></div>
+        <!-- Para el Objetivo 3 -->
+        <div></div>
+        <!-- Para el Objetivo 4 -->
+        <div></div>
+        <!-- Para el Objetivo 5 -->
+      </section>
+
+      <section class="main-content glassmorphism-effect padding-box">
+        <div class="title">
+          <p>Objetivos</p>
+          <p>Lo que quiero lograr</p>
+        </div>
+        <!-- Para el título -->
+        <div>
+          <!-- Para el contendor que genera la cuadrícula de los días de la semana -->
+          <div>
+            <div>
+                <p>Lunes</p>
+                <div class="card">
+                    <div class="glassmorphism-effect">
+                        <p>Ejercicio</p>
+                    </div>
+                    <div class="glassmorphism-effect">
+                        <p>7:00am</p>
+                        <p>Cardio</p>
+                    </div>
+                </div><!-- Para la card -->
+            </div>
+            <div>
+                <p>Martes</p>
+                <div></div><!-- Para la card -->
+            </div>
+            <div>
+                <p>Miércoles</p>
+                <div></div><!-- Para la card -->
+            </div>
+            <div>
+                <p>Jueves</p>
+                <div></div><!-- Para la card -->
+            </div>
+            <div>
+                <p>Viernes</p>
+                <div></div><!-- Para la card -->
+            </div>
+        <div>
+      </section>
+    </div>
+  </body>
 </html>
