Fix - Solve design errors

--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
     />
   </head>
   <body>
-    <div>
-      <section>
+    <div class="bubble bubble-one glassmorphism-effect"></div>
+    <div class="bubble bubble-two glassmorphism-effect"></div>
+    <div class="bubble bubble-three glassmorphism-effect"></div>
+    <div class="bubble bubble-four glassmorphism-effect"></div>
+    <div class="container glassmorphism-effect padding-box">
+      <section class="glassmorphism-effect padding-box">
         <div class="title">
           <p>Objetivos</p>
           <p>Lo que quiero lograr</p>
         </div>
-        <!-- Para el título -->
         <div class="goals">
           <div class="glassmorphism-effect">
             <img
@@ -29,55 +32,143 @@
           </div>
           <p>Leer más</p>
         </div>
-        <!-- Para el Objetivo 1 -->
-        <div></div>
-        <!-- Para el Objetivo 2 -->
-        <div></div>
-        <!-- Para el Objetivo 3 -->
-        <div></div>
-        <!-- Para el Objetivo 4 -->
-        <div></div>
-        <!-- Para el Objetivo 5 -->
+        <div class="goals">
+          <div class="glassmorphism-effect">
+            <img
+              src="https://img.icons8.com/nolan/64/dumbbell.png"
+              alt="pesa"
+            />
+          </div>
+          <p>Hacer ejercicio</p>
+        </div>
+        <div class="goals">
+          <div class="glassmorphism-effect">
+            <img
+              src="https://img.icons8.com/nolan/64/time-management.png"
+              alt="manejo del tiempo"
+            />
+          </div>
+          <p>Ser más productiva</p>
+        </div>
+        <div class="goals">
+          <div class="glassmorphism-effect">
+            <img
+              src="https://img.icons8.com/nolan/64/vegetarian-food.png"
+              alt="comida sana"
+            />
+          </div>
+          <p>Comer sano</p>
+        </div>
+        <div class="goals">
+          <div class="glassmorphism-effect">
+            <img src="https://img.icons8.com/nolan/64/time.png" alt="reloj" />
+          </div>
+          <p>Dedicarme más tiempo</p>
+        </div>
       </section>
-
       <section class="main-content glassmorphism-effect padding-box">
         <div class="title">
-          <p>Objetivos</p>
-          <p>Lo que quiero lograr</p>
+          <p>Planeador semanal</p>
+          <p>Semana del 15 al 19 de marzo</p>
         </div>
-        <!-- Para el título -->
         <div>
-          <!-- Para el contendor que genera la cuadrícula de los días de la semana -->
           <div>
-            <div>
-                <p>Lunes</p>
-                <div class="card">
-                    <div class="glassmorphism-effect">
-                        <p>Ejercicio</p>
-                    </div>
-                    <div class="glassmorphism-effect">
-                        <p>7:00am</p>
-                        <p>Cardio</p>
-                    </div>
-                </div><!-- Para la card -->
+            <p>Lunes</p>
+            <div class="card">
+              <div class="glassmorphism-effect">
+                <p>Ejercicio</p>
+              </div>
+              <div class="glassmorphism-effect">
+                <p>7:00am</p>
+                <p>Cardio</p>
+              </div>
             </div>
-            <div>
-                <p>Martes</p>
-                <div></div><!-- Para la card -->
+          </div>
+          <div>
+            <p>Martes</p>
+            <div class="card margin-bottom-card">
+              <div class="glassmorphism-effect">
+                <p>Yoga</p>
+              </div>
+              <div class="glassmorphism-effect">
+                <p>7:00am</p>
+                <p>Clase grupal</p>
+              </div>
             </div>
-            <div>
-                <p>Miércoles</p>
-                <div></div><!-- Para la card -->
+            <div class="card">
+              <div class="glassmorphism-effect">
+                <p>Inglés</p>
+              </div>
+              <div class="glassmorphism-effect">
+                <p>8:00am</p>
+                <p>Listening</p>
+              </div>
             </div>
-            <div>
-                <p>Jueves</p>
-                <div></div><!-- Para la card -->
+          </div>
+          <div>
+            <p>Miércoles</p>
+            <div class="card margin-bottom-card">
+              <div class="glassmorphism-effect">
+                <p>Ejercicio</p>
+              </div>
+              <div class="glassmorphism-effect">
+                <p>7:00am</p>
+                <p>Piernas</p>
+              </div>
             </div>
-            <div>
-                <p>Viernes</p>
-                <div></div><!-- Para la card -->
+            <div class="card">
+              <div class="glassmorphism-effect">
+                <p>Cita</p>
+              </div>
+              <div class="glassmorphism-effect">
+                <p>8:00am</p>
+                <p>Odontología</p>
+              </div>
             </div>
-        <div>
+          </div>
+          <div>
+            <p>Jueves</p>
+            <div class="card margin-bottom-card">
+              <div class="glassmorphism-effect">
+                <p>Yoga</p>
+              </div>
+              <div class="glassmorphism-effect">
+                <p>7:00am</p>
+                <p>Clase grupal</p>
+              </div>
+            </div>
+            <div class="card margin-bottom-card">
+              <div class="glassmorphism-effect">
+                <p>Inglés</p>
+              </div>
+              <div class="glassmorphism-effect">
+                <p>8:00am</p>
+                <p>Exámen</p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="glassmorphism-effect">
+                <p>Lectura</p>
+              </div>
+              <div class="glassmorphism-effect">
+                <p>9:00pm</p>
+                <p>Pág. 70-90</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <p>Viernes</p>
+            <div class="card">
+              <div class="glassmorphism-effect">
+                <p>Ejercicio</p>
+              </div>
+              <div class="glassmorphism-effect">
+                <p>7:00am</p>
+                <p>Brazos</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </div>
   </body>
